Fix IE hr not showing on issue detail page.

--- a/public/stylesheets/ie7.css
+++ b/public/stylesheets/ie7.css
@@ -54,3 +54,8 @@ div.attachments {
 fieldset.collapsible.header_collapsible legend {
   margin-left: -15px;
 }
+
+.issue hr {
+  width: 100% !important;
+  color: #ccc;
+}
